perf(collections): memoize the list slot layout — ArrayList ops cost ~1us per call
Triaging netty batch-03 found its only failure was not a netty problem.
io.netty.buffer.search.SearchProcessorTest's Aho-Corasick case builds a
256-entry-per-node ArrayList<Integer> trie and made 6.05M ArrayList native
calls; each cost ~1.07us, so the test blew JUnit's 120s per-test cap while its
two sibling algorithms passed.

The measurement chain, because the conclusion is not obvious from the source:

  probe          build-only, 2016 factories, 64-byte needles:
                   KMP              2ms HotSpot / 39ms CratonVM   (20x)
                   SHIFTING_BITMASK 1ms / 44ms                    (44x)
                   AHO_CORASIC    214ms / 217477ms              (1016x)
                 20-44x is this VM's ordinary interpreted gap; 1016x is not.
  --stack-sample-ms 99% of interpreted time in buildTrie, with the LEAF in
                 buildTrie itself and no callee frames -- the signature of
                 native calls, which never push an interpreter frame.
  --dump-native-registry  ArrayList get/size/add = 6.05M of 6.11M total
                 invocations (99%).
  scaling probe  per-op cost FLAT from 100 to 64000 elements, so never an
                 algorithmic O(n) bug -- just a very large constant.
  plain-Java control, same VM:
                   MyList.size()   (ordinary bytecode)    28 ns/op
                   ArrayList.size() (native)            1014 ns/op
                   Math.max, Integer.valueOf (natives)  60-85 ns/op
                 So neither the interpreter nor native dispatch in general;
                 specifically the collection natives, at 36x the identical
                 method body written in Java.

Root cause: al_slots_for resolves which slots hold elementData/size for the
receiver and sits on the path of EVERY native_al_* entry point, re-deriving
that constant per call -- a string-keyed class_id_by_name, an is_subclass walk,
and two string-keye